Criação de subpasta managers

--- a/app/src/main/res/layout/fragment_vintage_manager.xml
+++ b/app/src/main/res/layout/fragment_vintage_manager.xml
@@ -7,12 +7,12 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:orientation="vertical"
-    tools:context=".ui.ManagerFragment">
+    tools:context=".ui.managers.ManagerFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".ui.VintageManagerFragment">
+        tools:context=".ui.managers.VintageManagerFragment">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar_layout"
