Criação do fragment request

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#DADADA</color>
     <color name="green_leaf">#08AD7F</color>
+    <color name="red">#CD1919</color>
+
 </resources>
