--- a/app/src/main/res/layout/item_received_request.xml
+++ b/app/src/main/res/layout/item_received_request.xml
@@ -77,7 +77,7 @@
             android:importantForAccessibility="no" />
 
         <ImageView
-            android:id="@+id/image_exclude"
+            android:id="@+id/image_refuse"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_margin="12dp"
